deploy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: command-runner
  namespace: command-runner
  labels:
    service: command-runner
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: command-runner
