deploy/cbssports-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egress
  namespace: command-runner
spec:
  selector:
    istio: egress
  servers:
  - port:
      number: 80
      name: https
      protocol: HTTPS
    hosts:
    - www.cbssports.com
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egress-for-cbssports
  namespace: command-runner
spec:
  host: istio-egress.istio-system.svc.cluster.local
  subsets:
  - name: cbssports
    trafficPolicy:
      portLevelSettings:
      - port:
          number: 80
        tls:
          mode: ISTIO_MUTUAL
          sni: www.cbssports.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-cbssports-through-egress-gateway
  namespace: command-runner
spec:
  hosts:
  - www.cbssports.com
  gateways:
  - mesh
  - istio-egress
  http:
  - match:
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egress.istio-system.svc.cluster.local
        subset: cbssports
        port:
          number: 80
      weight: 100
  - match:
    - gateways:
      - istio-egress
      port: 80
    route:
    - destination:
        host: www.cbssports.com
        port:
          number: 443
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: originate-tls-for-cbssports
  namespace: command-runner
spec:
  host: www.cbssports.com
  trafficPolicy:
    portLevelSettings:
    - port:
        number: 443
      tls:
        mode: SIMPLE
